--- a/contact.html
+++ b/contact.html
@@ -62,13 +62,16 @@
                 <img src="https://via.placeholder.com/600x400" alt="Map Placeholder" class="img-fluid">
             </div>
         </div>
+        <div class="content">
+            <h2>Follow Us</h2>
+            <p>Follow us on 
+                <a href="https://www.instagram.com/_deleens/" class="text-dark">Instagram</a> and 
+                <a href="https://www.facebook.com/profile.php?id=61556402116452" class="text-dark">Facebook</a>
+            </p>
+        </div>
     </div>
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2023 Deleens Home Bake</p>
-        <p>Follow us on 
-            <a href="https://www.instagram.com/_deleens/" class="text-white">Instagram</a> and 
-            <a href="https://www.facebook.com/profile.php?id=61556402116452" class="text-white">Facebook</a>
-        </p>
         <p>Last updated: <script>document.write(new Date().toLocaleString())</script></p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
