--- a/index.html
+++ b/index.html
@@ -37,10 +37,81 @@
             </ul>
         </div>
     </nav>
-    <div class="hero text-center">
+    <div class="hero text-center" style="background-image: url('https://via.placeholder.com/1920x1080'); background-size: cover; background-position: center;">
         <h1>Deleens Home Bake</h1>
         <p>Your home for delicious homemade baked goods.</p>
         <a href="order.html" class="btn btn-primary">Order Now</a>
+    </div>
+    <div class="container mt-5">
+        <section class="features">
+            <h2>Our Bestsellers</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="https://via.placeholder.com/150" alt="Product 1" class="img-fluid">
+                    <h3>Product 1</h3>
+                    <p>Short description of Product 1.</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="https://via.placeholder.com/150" alt="Product 2" class="img-fluid">
+                    <h3>Product 2</h3>
+                    <p>Short description of Product 2.</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="https://via.placeholder.com/150" alt="Product 3" class="img-fluid">
+                    <h3>Product 3</h3>
+                    <p>Short description of Product 3.</p>
+                </div>
+            </div>
+        </section>
+        <section class="testimonials mt-5">
+            <h2>What Our Customers Say</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <blockquote class="blockquote">
+                        <p class="mb-0">"Amazing baked goods! Highly recommend."</p>
+                        <footer class="blockquote-footer">Customer 1</footer>
+                    </blockquote>
+                </div>
+                <div class="col-md-4">
+                    <blockquote class="blockquote">
+                        <p class="mb-0">"Best bakery in town. Great service."</p>
+                        <footer class="blockquote-footer">Customer 2</footer>
+                    </blockquote>
+                </div>
+                <div class="col-md-4">
+                    <blockquote class="blockquote">
+                        <p class="mb-0">"Delicious and fresh every time."</p>
+                        <footer class="blockquote-footer">Customer 3</footer>
+                    </blockquote>
+                </div>
+            </div>
+        </section>
+        <section class="about mt-5">
+            <h2>About Us</h2>
+            <p>Learn more about Deleens Home Bake and our story.</p>
+            <a href="about.html" class="btn btn-secondary">Learn More</a>
+        </section>
+        <section class="newsletter mt-5">
+            <h2>Subscribe to Our Newsletter</h2>
+            <form>
+                <div class="form-group">
+                    <label for="email">Email address:</label>
+                    <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                </div>
+                <button type="submit" class="btn btn-primary">Subscribe</button>
+            </form>
+        </section>
+        <section class="social-media mt-5">
+            <h2>Follow Us</h2>
+            <div class="d-flex justify-content-center">
+                <a href="https://www.instagram.com/_deleens/" class="mx-2">
+                    <img src="https://via.placeholder.com/50" alt="Instagram">
+                </a>
+                <a href="https://www.facebook.com/profile.php?id=61556402116452" class="mx-2">
+                    <img src="https://via.placeholder.com/50" alt="Facebook">
+                </a>
+            </div>
+        </section>
     </div>
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2023 Deleens Home Bake</p>
