--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="order.html">Order</a>
+                    <a class="nav-link active" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
@@ -34,81 +34,56 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="cart.html">Cart</a>
+                </li>
             </ul>
         </div>
     </nav>
-    <div class="hero text-center" style="background-image: url('https://via.placeholder.com/1920x1080'); background-size: cover; background-position: center;">
-        <h1>Deleens Home Bake</h1>
-        <p>Your home for delicious homemade baked goods.</p>
-        <a href="order.html" class="btn btn-primary">Order Now</a>
-    </div>
-    <div class="container mt-5">
-        <section class="features">
-            <h2>Our Bestsellers</h2>
+    <div class="container mt-5 pt-5">
+        <section class="products">
+            <h2>Our Products</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="https://via.placeholder.com/150" alt="Product 1" class="img-fluid">
-                    <h3>Product 1</h3>
-                    <p>Short description of Product 1.</p>
+                    <div class="card">
+                        <img src="https://via.placeholder.com/300x300" alt="Product 1" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Product 1</h5>
+                            <p class="card-text">$10.00</p>
+                            <a href="#" class="btn btn-primary">Add to Cart</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="https://via.placeholder.com/150" alt="Product 2" class="img-fluid">
-                    <h3>Product 2</h3>
-                    <p>Short description of Product 2.</p>
+                    <div class="card">
+                        <img src="https://via.placeholder.com/300x300" alt="Product 2" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Product 2</h5>
+                            <p class="card-text">$15.00</p>
+                            <a href="#" class="btn btn-primary">Add to Cart</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="https://via.placeholder.com/150" alt="Product 3" class="img-fluid">
-                    <h3>Product 3</h3>
-                    <p>Short description of Product 3.</p>
+                    <div class="card">
+                        <img src="https://via.placeholder.com/300x300" alt="Product 3" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Product 3</h5>
+                            <p class="card-text">$20.00</p>
+                            <a href="#" class="btn btn-primary">Add to Cart</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </section>
-        <section class="testimonials mt-5">
-            <h2>What Our Customers Say</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    <blockquote class="blockquote">
-                        <p class="mb-0">"Amazing baked goods! Highly recommend."</p>
-                        <footer class="blockquote-footer">Customer 1</footer>
-                    </blockquote>
-                </div>
-                <div class="col-md-4">
-                    <blockquote class="blockquote">
-                        <p class="mb-0">"Best bakery in town. Great service."</p>
-                        <footer class="blockquote-footer">Customer 2</footer>
-                    </blockquote>
-                </div>
-                <div class="col-md-4">
-                    <blockquote class="blockquote">
-                        <p class="mb-0">"Delicious and fresh every time."</p>
-                        <footer class="blockquote-footer">Customer 3</footer>
-                    </blockquote>
-                </div>
-            </div>
-        </section>
-        <section class="about mt-5">
-            <h2>About Us</h2>
-            <p>Learn more about Deleens Home Bake and our story.</p>
-            <a href="about.html" class="btn btn-secondary">Learn More</a>
-        </section>
-        <section class="newsletter mt-5">
-            <h2>Subscribe to Our Newsletter</h2>
-            <form>
-                <div class="form-group">
-                    <label for="email">Email address:</label>
-                    <input type="email" class="form-control" id="email" placeholder="Enter your email">
-                </div>
-                <button type="submit" class="btn btn-primary">Subscribe</button>
-            </form>
         </section>
         <section class="social-media mt-5">
             <h2>Follow Us</h2>
             <div class="d-flex justify-content-center">
                 <a href="https://www.instagram.com/_deleens/" class="mx-2">
-                    <img src="https://via.placeholder.com/50" alt="Instagram">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" width="50" height="50">
                 </a>
                 <a href="https://www.facebook.com/profile.php?id=61556402116452" class="mx-2">
-                    <img src="https://via.placeholder.com/50" alt="Facebook">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" width="50" height="50">
                 </a>
             </div>
         </section>
