Update website content

--- a/cart.html
+++ b/cart.html
@@ -66,6 +66,9 @@
                 </div>
             </div>
         </div>
+        <div class="empty-cart-message" style="display: none;">
+            <p>Your cart is empty.</p>
+        </div>
     </div>
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2023 Deleens Home Bake</p>
