--- a/index.html
+++ b/index.html
@@ -38,9 +38,18 @@
                     <a class="nav-link" href="cart.html">Cart</a>
                 </li>
             </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </div>
     </nav>
-    <div class="container mt-5 pt-5">
+    <div class="hero text-center" style="background-image: url('https://via.placeholder.com/1920x1080'); background-size: cover; background-position: center;">
+        <h1>Deleens Home Bake</h1>
+        <p>Your home for delicious homemade baked goods.</p>
+        <a href="#products" class="btn btn-primary">Shop Now</a>
+    </div>
+    <div class="container mt-5 pt-5" id="products">
         <section class="products">
             <h2>Our Products</h2>
             <div class="row">
@@ -91,6 +100,10 @@
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2023 Deleens Home Bake</p>
         <p>Last updated: <script>document.write(new Date().toLocaleString())</script></p>
+        <form class="form-inline justify-content-center">
+            <input class="form-control mr-sm-2" type="email" placeholder="Enter your email" aria-label="Email">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Subscribe</button>
+        </form>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
