--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="https://via.placeholder.com/300x300" alt="Product 1" class="card-img-top">
+                        <img src="resources/image1.jpg" alt="Product 1" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Product 1</h5>
                             <p class="card-text">$10.00</p>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="https://via.placeholder.com/300x300" alt="Product 2" class="card-img-top">
+                        <img src="resources/image2.jpg" alt="Product 2" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Product 2</h5>
                             <p class="card-text">$15.00</p>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="https://via.placeholder.com/300x300" alt="Product 3" class="card-img-top">
+                        <img src="resources/image3.jpg" alt="Product 3" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Product 3</h5>
                             <p class="card-text">$20.00</p>
